remove git submodules from workflows/actions

--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc', 'git-submodules', 'openssl')
+          deps: ('protoc', 'openssl')
 
       - name: Calculate commit hash for PR commit
         if: github.event_name == 'pull_request'
@@ -111,7 +111,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc', 'python3', 'paramiko', 'git-submodules')
+          deps: ('protoc', 'python3', 'paramiko')
 
       - name: Calculate commit hash for PR commit
         if: github.event_name == 'pull_request'
@@ -174,7 +174,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc', 'python3', 'paramiko', 'git-submodules')
+          deps: ('protoc', 'python3', 'paramiko')
 
       - name: Calculate commit hash for PR commit
         if: github.event_name == 'pull_request'
@@ -236,7 +236,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc', 'python3', 'paramiko', 'git-submodules')
+          deps: ('protoc', 'python3', 'paramiko')
 
       - name: Calculate commit hash for PR commit
         if: github.event_name == 'pull_request'
@@ -323,7 +323,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc', 'python3', 'paramiko', 'git-submodules')
+          deps: ('protoc', 'python3', 'paramiko')
 
       - name: Calculate commit hash for PR commit
         if: github.event_name == 'pull_request'
@@ -391,7 +391,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc', 'git-submodules')
+          deps: ('protoc')
 
       - name: Install toolchain
         run: |
@@ -453,7 +453,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc', 'python3', 'paramiko', 'git-submodules')
+          deps: ('protoc', 'python3', 'paramiko')
 
       - name: Calculate commit hash for PR commit
         if: github.event_name == 'pull_request'
@@ -528,7 +528,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc', 'git-submodules', 'openssl')
+          deps: ('protoc', 'openssl')
 
       - name: Setup NDK
         run: ./scripts/ci/android-ndk.sh x86 23
@@ -607,7 +607,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc', 'git-submodules', 'openssl')
+          deps: ('protoc', 'openssl')
 
       - name: Setup NDK
         run: ./scripts/ci/android-ndk.sh x86 23
