wasm lint with --all-features

--- a/.github/workflows/fmt-and-lint.yml
+++ b/.github/workflows/fmt-and-lint.yml
@@ -58,4 +58,4 @@ jobs:
         uses: ./.github/actions/cargo-cache
 
       - name: clippy lint
-        run: cargo clippy --target wasm32-unknown-unknown -- --D warnings
+        run: cargo clippy --target wasm32-unknown-unknown --all-features -- --D warnings
