remove feature flag from wasm target in .cargo/config

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -25,6 +25,5 @@ rustflags = [ "-Zshare-generics=y" ]
 [target.wasm32-unknown-unknown]
 runner = 'wasm-bindgen-test-runner'
 rustflags = [
-    "--cfg=web_sys_unstable_apis",
-    "--cfg", "feature=\"enable-sia\""
+    "--cfg=web_sys_unstable_apis"
 ]
