--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -24,6 +24,4 @@ rustflags = [ "-Zshare-generics=y" ]
 
 [target.wasm32-unknown-unknown]
 runner = 'wasm-bindgen-test-runner'
-rustflags = [
-    "--cfg=web_sys_unstable_apis"
-]
+rustflags = [ "--cfg=web_sys_unstable_apis" ]
