--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Test
         run: |
-          cargo test --bins --lib --no-fail-fast
+          cargo test --bins --lib --no-fail-fast --features enable-sia
 
   mac-x86-64-unit:
     timeout-minutes: 90
@@ -66,7 +66,7 @@ jobs:
 
       - name: Test
         run: |
-          cargo test --bins --lib --no-fail-fast
+          cargo test --bins --lib --no-fail-fast --features enable-sia
 
   win-x86-64-unit:
     timeout-minutes: 90
@@ -94,7 +94,7 @@ jobs:
 
       - name: Test
         run: |
-          cargo test --bins --lib --no-fail-fast
+          cargo test --bins --lib --no-fail-fast --features enable-sia
 
   linux-x86-64-kdf-integration:
     timeout-minutes: 90
@@ -123,7 +123,7 @@ jobs:
       - name: Test
         run: |
           wget -O - https://raw.githubusercontent.com/KomodoPlatform/komodo/master/zcutil/fetch-params-alt.sh | bash
-          cargo test --test 'mm2_tests_main' --no-fail-fast
+          cargo test --test 'mm2_tests_main' --no-fail-fast --features enable-sia
 
   mac-x86-64-kdf-integration:
     timeout-minutes: 90
@@ -155,7 +155,7 @@ jobs:
       - name: Test
         run: |
           wget -O - https://raw.githubusercontent.com/KomodoPlatform/komodo/master/zcutil/fetch-params-alt.sh | bash
-          cargo test --test 'mm2_tests_main' --no-fail-fast
+          cargo test --test 'mm2_tests_main' --no-fail-fast --features enable-sia
 
   win-x86-64-kdf-integration:
     timeout-minutes: 90
@@ -185,7 +185,7 @@ jobs:
         run: |
           Invoke-WebRequest -Uri https://github.com/KomodoPlatform/komodo/raw/d456be35acd1f8584e1e4f971aea27bd0644d5c5/zcutil/wget64.exe -OutFile \wget64.exe
           Invoke-WebRequest -Uri https://raw.githubusercontent.com/KomodoPlatform/komodo/master/zcutil/fetch-params-alt.bat -OutFile \cmd.bat && \cmd.bat
-          cargo test --test 'mm2_tests_main' --no-fail-fast
+          cargo test --test 'mm2_tests_main' --no-fail-fast --features enable-sia
 
   docker-tests:
     timeout-minutes: 90
@@ -214,7 +214,7 @@ jobs:
       - name: Test
         run: |
           wget -O - https://raw.githubusercontent.com/KomodoPlatform/komodo/v0.8.1/zcutil/fetch-params-alt.sh | bash
-          cargo test --test 'docker_tests_main' --features run-docker-tests --no-fail-fast
+          cargo test --test 'docker_tests_main' --features ["run-docker-tests","enable-sia"] --no-fail-fast
 
   wasm:
     timeout-minutes: 90
@@ -253,4 +253,4 @@ jobs:
         uses: ./.github/actions/cargo-cache
 
       - name: Test
-        run: WASM_BINDGEN_TEST_TIMEOUT=480 GECKODRIVER=/bin/geckodriver wasm-pack test --firefox --headless mm2src/mm2_main --all-features
+        run: WASM_BINDGEN_TEST_TIMEOUT=480 GECKODRIVER=/bin/geckodriver wasm-pack test --firefox --headless mm2src/mm2_main --features enable-sia
