--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -214,7 +214,7 @@ jobs:
       - name: Test
         run: |
           wget -O - https://raw.githubusercontent.com/KomodoPlatform/komodo/v0.8.1/zcutil/fetch-params-alt.sh | bash
-          cargo test --test 'docker_tests_main' --features ["run-docker-tests","enable-sia"] --no-fail-fast
+          cargo test --test 'docker_tests_main' --features run-docker-tests --no-fail-fast
 
   wasm:
     timeout-minutes: 90
