--- a/mm2src/coins_activation/Cargo.toml
+++ b/mm2src/coins_activation/Cargo.toml
@@ -21,6 +21,7 @@ derive_more = "0.99"
 ethereum-types = { version = "0.13", default-features = false, features = ["std", "serialize"] }
 futures = { version = "0.3", package = "futures", features = ["compat", "async-await"] }
 hex = "0.4.2"
+kdf_walletconnect = { path = "../kdf_walletconnect" }
 mm2_core = { path = "../mm2_core" }
 mm2_err_handle = { path = "../mm2_err_handle" }
 mm2_event_stream = { path = "../mm2_event_stream" }
