fix tendermint pubkey derivation from walletconnect

--- a/mm2src/kdf_walletconnect/Cargo.toml
+++ b/mm2src/kdf_walletconnect/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1.52"
+base64 = "0.21.2"
 chrono = { version = "0.4.23", "features" = ["serde"] }
 common = { path = "../common" }
 derive_more = "0.99"
