--- a/mm2src/kdf_walletconnect/Cargo.toml
+++ b/mm2src/kdf_walletconnect/Cargo.toml
@@ -8,6 +8,7 @@ async-trait = "0.1.52"
 base64 = "0.21.2"
 chrono = { version = "0.4.23", "features" = ["serde"] }
 common = { path = "../common" }
+db_common = { path = "../db_common" }
 derive_more = "0.99"
 enum_derives = { path = "../derives/enum_derives" }
 futures = { version = "0.3", package = "futures", features = [
