--- a/mm2src/kdf_walletconnect/Cargo.toml
+++ b/mm2src/kdf_walletconnect/Cargo.toml
@@ -17,6 +17,8 @@ futures = { version = "0.3", package = "futures", features = [
 ] }
 hex = "0.4.2"
 hkdf = "0.12.4"
+mm2_core = { path = "../mm2_core" }
+mm2_db = { path = "../mm2_db" }
 mm2_err_handle = { path = "../mm2_err_handle" }
 pairing_api = { path = "../../../kdf-wc/pairing_api" }
 rand = "0.8"
@@ -30,3 +32,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
 x25519-dalek = { version = "2.0", features = ["static_secrets"] }
 
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+mm2_db = { path = "../mm2_db" }
