--- a/mm2src/kdf_walletconnect/Cargo.toml
+++ b/mm2src/kdf_walletconnect/Cargo.toml
@@ -8,6 +8,7 @@ async-trait = "0.1.52"
 base64 = "0.21.2"
 chrono = { version = "0.4.23", "features" = ["serde"] }
 common = { path = "../common" }
+cfg-if = "1.0"
 db_common = { path = "../db_common" }
 derive_more = "0.99"
 enum_derives = { path = "../derives/enum_derives" }
@@ -34,3 +35,14 @@ x25519-dalek = { version = "2.0", features = ["static_secrets"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 mm2_db = { path = "../mm2_db" }
+mm2_test_helpers = { path = "../mm2_test_helpers" }
+wasm-bindgen = "0.2.86"
+wasm-bindgen-test = { version = "0.3.2" }
+wasm-bindgen-futures = "0.4.21"
+web-sys = { version = "0.3.55", features = ["console", "CloseEvent", "DomException", "ErrorEvent", "IdbDatabase",
+    "IdbCursor", "IdbCursorWithValue", "IdbFactory", "IdbIndex", "IdbIndexParameters", "IdbObjectStore",
+    "IdbObjectStoreParameters", "IdbOpenDbRequest", "IdbKeyRange", "IdbTransaction", "IdbTransactionMode",
+    "IdbVersionChangeEvent", "MessageEvent", "MessagePort", "ReadableStreamDefaultReader", "ReadableStream"]}
+
+[dev-dependencies]
+mm2_test_helpers = { path = "../mm2_test_helpers" }
