--- a/mm2src/kdf_walletconnect/Cargo.toml
+++ b/mm2src/kdf_walletconnect/Cargo.toml
@@ -37,6 +37,7 @@ x25519-dalek = { version = "2.0", features = ["static_secrets"] }
 tokio = { version = "1.20" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
+js-sys = { version = "0.3.27" }
 mm2_db = { path = "../mm2_db" }
 mm2_test_helpers = { path = "../mm2_test_helpers" }
 wasm-bindgen = "0.2.86"
