--- a/mm2src/crypto/Cargo.toml
+++ b/mm2src/crypto/Cargo.toml
@@ -34,7 +34,6 @@ mm2_err_handle = { path = "../mm2_err_handle" }
 num-traits = "0.2"
 parking_lot = { version = "0.12.0", features = ["nightly"] }
 primitives = { path = "../mm2_bitcoin/primitives" }
-rand = "0.8"
 rpc = { path = "../mm2_bitcoin/rpc" }
 rpc_task = { path = "../rpc_task" }
 rustc-hex = "2"
@@ -61,3 +60,6 @@ tokio = { version = "1.20", default-features = false }
 
 [features]
 trezor-udp = ["trezor/trezor-udp"]
+
+[patch.crates-io]
+rand = { version = "0.8.5", package = "rand" }
