--- a/mm2src/crypto/Cargo.toml
+++ b/mm2src/crypto/Cargo.toml
@@ -13,7 +13,7 @@ arrayref = "0.3"
 async-trait = "0.1"
 base64 = "0.21.2"
 bip32 = { version = "0.2.2", default-features = false, features = ["alloc", "secp256k1-ffi"] }
-bip39 = { version = "2.1.0", features = ["rand_core", "zeroize"], default-features = false }
+bip39 = { version = "2.0.0", features = ["rand_core", "zeroize"], default-features = false }
 bitcrypto = { path = "../mm2_bitcoin/crypto" }
 bs58 = "0.4.0"
 cbc = "0.1.2"
@@ -34,6 +34,7 @@ mm2_err_handle = { path = "../mm2_err_handle" }
 num-traits = "0.2"
 parking_lot = { version = "0.12.0", features = ["nightly"] }
 primitives = { path = "../mm2_bitcoin/primitives" }
+rand = "0.8.5"
 rpc = { path = "../mm2_bitcoin/rpc" }
 rpc_task = { path = "../rpc_task" }
 rustc-hex = "2"
