--- a/mm2src/mm2_net/Cargo.toml
+++ b/mm2src/mm2_net/Cargo.toml
@@ -17,7 +17,7 @@ bytes = "1.1"
 cfg-if = "1.0"
 common = { path = "../common" }
 derive_more = "0.99"
-ethkey = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git", rev = "mm2-v2.1.1" }
+ethkey = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git", branch = "fix-pubkey-recover-from-sig" }
 futures = { version = "0.3", package = "futures", features = ["compat", "async-await", "thread-pool"] }
 gstuff = "0.7"
 http = "0.2"
