--- a/mm2src/kdf_walletconnect/Cargo.toml
+++ b/mm2src/kdf_walletconnect/Cargo.toml
@@ -9,7 +9,7 @@ async-trait = "0.1.52"
 base64 = "0.21.2"
 chrono = { version = "0.4.23", "features" = ["serde"] }
 common = { path = "../common" }
-const-hex = "1.13.1"
+hex = "0.4.2"
 cfg-if = "1.0"
 db_common = { path = "../db_common" }
 derive_more = "0.99"
