revert mm2-parity-eth lib ver

--- a/mm2src/mm2_main/Cargo.toml
+++ b/mm2src/mm2_main/Cargo.toml
@@ -142,7 +142,7 @@ web3 = { git = "https://github.com/KomodoPlatform/rust-web3", tag = "v0.20.0", d
 ] }
 ethabi = { version = "17.0.0" }
 rlp = { version = "0.5" }
-ethcore-transaction = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git", branch = "fix-pubkey-recover-from-sig" }
+ethcore-transaction = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git", rev = "mm2-v2.1.1" }
 rustc-hex = "2"
 sia-rust = { git = "https://github.com/KomodoPlatform/sia-rust", rev = "9f188b80b3213bcb604e7619275251ce08fae808" }
 url = { version = "2.2.2", features = ["serde"] }
