--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,9 +77,10 @@ jobs:
         if: ${{ env.FILE_SERVER_KEY != '' }}
         run: python3 ./scripts/ci/upload_artifact.py "${{ env.BRANCH_NAME }}" "/uploads/${{ env.BRANCH_NAME }}"
 
-      - name: Login to dockerhub
-        run: docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}  docker.io
-
+    
+- name: Docker Login
+  uses: docker/login-action@v3.3.0
+  
       - name: Build and push container image
         run: |
           export CONTAINER_TAG=$(./target/release/kdf --version | awk '{print $3}')
