--- a/.github/workflows/no-docker.yml-main.yml
+++ b/.github/workflows/no-docker.yml-main.yml
@@ -77,7 +77,11 @@ jobs:
         if: ${{ env.FILE_SERVER_KEY != '' }}
         run: python3 ./scripts/ci/upload_artifact.py "${{ env.BRANCH_NAME }}" "/uploads/${{ env.BRANCH_NAME }}"
 
-    
+      - name: build-deb-action
+        uses: jiro4989/build-deb-action@v4.0.0
+
+      - name: build-rpm-action
+        uses: jiro4989/build-rpm-action@v2.5.0
      
   mac-x86-64:
     timeout-minutes: 60
